[package]
name = "pi_egl"
version = "0.1.0"
edition = "2021"
authors = ["moyy <myy412001799@gmail.com>"]
description = "Egl wrap for windows / android / webgl2"
repository = "https://github.com/GaiaWorld/pi_egl"
license = "MIT OR Apache-2.0"
keywords = ["pi", "egl"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
raw-window-handle = "0.5"
lazy_static = "1"
glow = "0.12"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "HtmlCanvasElement",
    "Window",
    "WebGl2RenderingContext",
    'WebGlProgram', 
    'WebGlShader', 
    'WebGlBuffer', 
    'WebGlUniformLocation'
]}

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["d3d11", "wingdi", "winuser", "libloaderapi"] }

[dev-dependencies]
winit = "0.28"