[package]
name = "pi_egl"
version = "0.1.16"
edition = "2021"
authors = ["moyy <myy412001799@gmail.com>"]
description = "Egl wrap for windows / android / webgl2"
repository = "https://github.com/GaiaWorld/pi_egl"
license = "MIT OR Apache-2.0"
keywords = ["pi", "egl"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
swappy = []
shared-stdcxx = []
fps = []

[dependencies]
pi_share = "0.4"

log = "0.4"
raw-window-handle = "0.6"
lazy_static = "1"
glow = { package = "pi_glow", version = "0.13", registry = "yn" }
libc = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "HtmlCanvasElement",
    "Window",
    "WebGl2RenderingContext",
    'WebGlProgram', 
    'WebGlShader', 
    'WebGlBuffer', 
    'WebGlUniformLocation'
]}

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wingdi", "winuser", "libloaderapi", "errhandlingapi"] }

[build-dependencies]
gl_generator = "0.14"

[dev-dependencies]
winit = {registry = "yn", version = "0.27"}
env_logger = "0.10"
log4rs = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
# Coordinate the next winit release with android-ndk-rs: https://github.com/rust-windowing/winit/issues/1995
ndk-glue = "0.7.0"
jni = "0.18"

[[example]]
name = "hello_android"
crate-type = ["cdylib"]